# invest-fetch-c

./: .gitignore  .travis.yml  CMakeLists  CMakeLists.txt  invest.c  nzx.c  nzx.h  nzxList.c  nzxList.h  test.txt
cmake/: FindHiredis.cmake
sql/: daily_price_ca.sql
src/: main.c
src/helpers/: cron.c  cron.h  postgres.c  postgres.h
src/logging/: logger.c  logger.h
src/nzx/: handler.c  handler.h  httpOps.c  httpOps.h  models.c  models.h  performance.c  performance.h  priceHandler.c  priceHandler.h
src/redis/: manager.c  manager.h
src/scheduler/: schedule.c  schedule.h
src/threading/: threadPool.c  threadPool.h
